tests/baselines/reference/functionTypeArgumentAssignmentCompat.errors.txt
==== tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts (1 errors) ====
    var f : {
     <T>(x:T): T;
    }
    
    var g : {
     <S>() : S[];
    } = () => [];
    
    f = g;
    var s = f("str").toUpperCase();
    
    console.log(s);
    ~~~~~~~
!!! functionTypeArgumentAssignmentCompat.ts(12,1): error TS2095: Could not find symbol 'console'.
    